--- a/Resources/public/apps/tools/slides-in-slide-config-editor.html
+++ b/Resources/public/apps/tools/slides-in-slide-config-editor.html
@@ -16,7 +16,7 @@
                 <input type="number" data-ng-model="slide.options.sis_total_items">
 
                 <div class="edit-menu--iframe-label">Number of items pr. slide</div>
-                <input type="number" data-ng-model="slide.options.sis_subslides_pr_slide">
+                <input type="number" data-ng-model="slide.options.sis_items_pr_slide">
 
                 <div class="edit-menu--iframe-label">Duration of subslides in seconds</div>
                 <input type="number" data-ng-model="slide.options.sis_subslide_duration">
